# panda_ros

./: .gitattributes  .gitignore  README.md  cyclonedds.xml  justfile  start.sh
.github/workflows/: mdbook.yml
docs/robotic_collaborative_cell/: book.toml
docs/robotic_collaborative_cell/src/: installation.md
docs/robotic_collaborative_cell/src/overview/: demo_visulization_app.md  image_processing.md  panda_interfaces.md  panda_utils.md  yolo_ros.md
docs/robotic_collaborative_cell/src/usage/: demo_run.md  keypoint_recognition.md  robot_controller.md  usage.md
src/demo_visualization_app/src/: color_node_app.cpp
src/image_processing/: CMakeLists.txt  package.xml
src/image_processing/examples/: image_saver.cpp  onnx_example.cpp  onnx_image_example.cpp  opencv_example.cpp  optical_flow_example.cpp
src/image_processing/include/image_processing/: constants.hpp  skeleton_infer.hpp  utils.hpp
src/image_processing/launch/: launch_track.py  launch_yolo_tracker.py
src/image_processing/src/: skeleton_infer.cpp  skeleton_track.cpp  skeleton_tracker_yolo.cpp
src/kinect_ros2/launch/: stream_kinect.py
src/onnxruntime/: CMakeLists.txt  package.xml
src/onnxruntime/env-hooks/: onnxruntime_library_path.sh
src/panda_interfaces/: CMakeLists.txt  package.xml
src/panda_interfaces/action/: JointTraj.action  LoopCartTraj.action  StopTraj.action
src/panda_interfaces/msg/: BodyLengths.msg  CLIKParameters.msg  FloatStringPair.msg  HumanDetected.msg  JacobianMatrix.msg  JointsCommand.msg  JointsEffort.msg  JointsPos.msg  Result.msg
src/panda_interfaces/srv/: CLIK.srv  CalculateJacobian.srv  ForwardKine.srv  SendJointsPosCmd.srv  WristContact.srv
src/panda_utils/: CMakeLists.txt  package.xml
src/panda_utils/examples/: cart_traj_example.cpp  demo.cpp  demo_node.cpp  demo_pd_grav.cpp  hand_and_force_estimation.cpp  hand_estimation.cpp  joint_traj_example.cpp  send_joints_effort_cmd_client.cpp  send_joints_pos_cmd_client.cpp
src/panda_utils/include/panda_utils/: constants.hpp  debug_publisher.hpp  utils_func.hpp
src/panda_utils/launch/: launch_demo.py  launch_utils.py
src/panda_utils/src/: cart_traj.cpp  clik_client.cpp  clik_cmd_publisher.cpp  clik_server.cpp  controller_manager.cpp  debug_publisher.cpp  exponential_cart_traj.cpp  forward_kine_client.cpp  forward_kine_server.cpp  frame_publisher.cpp  human_presence.cpp  impedance_controller.cpp  inverse_dynamics_controller.cpp  jacobian_client.cpp  jacobian_server.cpp  joint_traj.cpp  loop_cart_traj.cpp  pd_grav_controller.cpp  robot_model.cpp  send_joints_effort_cmd.cpp  send_joints_pos_cmd.cpp  send_joints_pos_cmd_client.cpp
src/panda_world/: CMakeLists.txt  package.xml
src/panda_world/config/: bridge.yaml
src/panda_world/launch/: launch_bridge.py  launch_sim.py
src/panda_world/models/: camera.urdf
src/panda_world/models/panda/: panda.sdf  panda.urdf  panda_fp3.urdf  panda_fr3.urdf  panda_fr3_moveit.urdf  panda_fr3_no_table.urdf
src/panda_world/src/: image_converter.cpp  joint_state_publisher_effort_patcher.cpp  torque_sensors_publisher.cpp
src/panda_world/worlds/: empty_world.sdf
src/yolo_ros/yolo_bringup/launch/: yolov8.launch.py
src/yolo_ros/yolo_ros/: package.xml
src/yolo_ros/yolo_ros/yolo_ros/: detect_3d_node.py
